# Sonivo

./: .gitignore  AGENTS.md  README.md
.agents/: product-marketing.md
KnowledgeHub/2) KD/: AGENT_BOOTSTRAP_PROMPT.md  CURATION_AUDIT.md  INSTALL_IN_NEW_PROJECT.md  START_HERE_FOR_AGENTS.md
KnowledgeHub/2) KD/0) Master Skill/: SKILL.md
KnowledgeHub/2) KD/1) Anthropic/: SKILL_INDEX.md
KnowledgeHub/2) KD/2) Debugging/: SKILL_INDEX.md
KnowledgeHub/2) KD/3) Marketing Backbone/: SKILL_INDEX.md
KnowledgeHub/2) KD/5) Engineer Subagents/agents-main/plugins/plugin-eval/: README.md  pyproject.toml
KnowledgeHub/2) KD/5) Engineer Subagents/agents-main/plugins/plugin-eval/.claude-plugin/: plugin.json
KnowledgeHub/2) KD/5) Engineer Subagents/agents-main/plugins/plugin-eval/commands/: compare.md  eval.md
KnowledgeHub/2) KD/5) Engineer Subagents/agents-main/plugins/plugin-eval/scripts/: eval_all.py
KnowledgeHub/2) KD/5) Engineer Subagents/agents-main/plugins/plugin-eval/skills/evaluation-methodology/: SKILL.md
KnowledgeHub/2) KD/5) Engineer Subagents/agents-main/plugins/plugin-eval/skills/evaluation-methodology/references/: rubrics.md
KnowledgeHub/2) KD/5) Engineer Subagents/agents-main/plugins/plugin-eval/src/plugin_eval/: __init__.py  cli.py  corpus.py  elo.py  engine.py  models.py  parser.py  reporter.py  stats.py
KnowledgeHub/2) KD/5) Engineer Subagents/agents-main/plugins/plugin-eval/src/plugin_eval/layers/: harness_portability.py  judge.py  monte_carlo.py  static.py
KnowledgeHub/2) KD/5) Engineer Subagents/agents-main/plugins/plugin-eval/tests/: conftest.py  test_cli.py  test_corpus.py  test_e2e.py  test_elo.py  test_engine.py  test_harness_portability.py  test_judge.py  test_models.py  test_monte_carlo.py  test_parser.py  test_reporter.py  test_static.py  test_stats.py
KnowledgeHub/2) KD/5) Engineer Subagents/agents-main/tools/yt-design-extractor/: pyproject.toml  yt-design-extractor.py
KnowledgeHub/3) OpenaI/: AI_Service_Operator_Knowledge_Base.md  Wettbewerb.md
docs/: 00-PROJECT_BRIEF.md  01-NAMING.md  02-CONTENT_PLAN.md  03-STACK_SETUP.md  04-PHASE_PLAN.md  05-HANDOVER_2026-05-26.md  06-IMPLEMENTATION_PLAN.md  07-LANDING_COPY_PLAN.md
website/: AGENTS.md  package-lock.json  package.json
(+557 files in other folders)
